# eir

./: .gitignore
src/: CMakeLists.txt  Makefile  app_eir.c  app_eir.h  app_eir_blacklist.cpp  app_eir_conf.l  app_eir_conf.y  app_eir_server.c  dict_eir.c
